Add submit form template